styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Covered+By+Your+Grace&family=Inter:wght@100;200;400;600;900&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: monospace;
}

body {
    background-image: url(./img/background-body.jpg);
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.7;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.wrapper-container {
    background-color: #00000087;
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    padding-bottom: 150px;
}

.main-title {
    margin-bottom: 60px;
}

.main-title .chain-left {
    width: 20px;
    height: 400px;
    position: absolute;
    top: 0;
    left: 30%;
    filter: brightness(0.5);
    z-index: 10;
}

.main-title .chain-right {
    width: 20px;
    height: 400px;
    position: absolute;
    top: 0;
    right: 30%;
    filter: brightness(0.5);
    z-index: 10;
}


figure.logo {
    display: flex;
    justify-content: center;
    width: 100%;
    padding-top: 100px;
}

.logo img {
    width: 85px;
}

.main-title h1 {
    color: transparent;
    background: linear-gradient(#6ee37c, #6b8323);
    background-clip: text;
    -webkit-background-clip: text;
    font-size: 65px;
    text-align: center;
    padding-top: 30px;
}

.main-title h2 {
    color: #ccc;
    font-size: 28px;
    text-align: center;
    padding-top: 10px;
    font-family: 'Covered By Your Grace', cursive;
    text-shadow: 3px 4px 5px #000;
}

.wrapper-guess {
    background: #000;
    max-width: 610px;
    width: 100%;
    margin: 0 auto;
    padding: 50px 40px;
    border: 4px solid #565656;
    box-shadow: 0 0 30px 11px #000;
    position: relative;
    z-index: 0;
}

.wrapper-guess p {
    font-size: 16px;
    text-align: center;
    color: #6b8323;
}

.btn-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0px auto;
}

.btn-wrapper input.guess-word {
    min-width: 250px;
    width: 100%;
    border-radius: 6px;
    border: 2px solid #000;
    background: transparent;
    box-shadow: 0 0 30px 11px #000;
    text-align: left;
    color: #fff !important;
}

.btn-wrapper input.guess-word:hover {
    border: 2px solid #000;
    background: transparent;
}

.icon-sandglass {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-top: 40px
}

.icon-sandglass .icon {
    width: 55px;
}

.icon.icon-rotate {
    transform: rotateX(180deg);
    transition: all ease .3s;
}

.inputs-wrapper {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
    margin: 0 auto;
}

.inputs-wrapper input {
    width: 180px;
    background: #000;
    border: 2px solid #fff;
    color: #fff;
    font-size: 16px;
    font-weight: 600;
    text-align: center;
    padding: 8px 12px;
    border-radius: 20px;
    cursor: pointer;
    transition: all ease .3s;
    margin-top: 20px;
}

.inputs-wrapper input:hover {
    background: #fff;
    color: grey;
    border: 2px solid #fff;
}

.inputs-wrapper p#text-tries {
    margin-top: 35px;
    color: #fff;
    font-size: 14px;
}

.inputs-wrapper p.shake {
    animation: text-move 0.3s;
    animation-iteration-count: 2;
    animation-timing-function: cubic-bezier(0.5,3,0.8,0.3);
}
 
@keyframes text-move {
    0% { transform: translate(0px, 0px); }
    30% { transform: translate(-10px, 0px); }
    60% { transform: translate(10px, 0px); }
    100% { transform: translate(0px, 0px); }
}


/*Login*************************************************************/
.login .login-container {
    margin: 250px auto 0 auto;
    background-color: #000;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px 50px;
    max-width: 350px;
    width: 100%;
    border: 4px solid #565656;
    box-shadow: 0 0 30px 11px #000;
}

.login .login-container img {
   width: 60px;
   margin-bottom: 15px;
   transform: rotateY(0deg);
   transition: all 1s ease;
}

.login .login-container img:hover {
    transform: rotateY(160deg);
 }

.login h2 {
    color: transparent;
    background: linear-gradient(#6ee37c, #6b8323);
    background-clip: text;
    -webkit-background-clip: text;
    font-size: 35px;
    text-align: center;
    margin-bottom: 25px;
}

.login p {
    color: #ccc;
    font-size: 28px;
    text-align: center;
    font-family: 'Covered By Your Grace', cursive;
    text-shadow: 3px 4px 5px #000;
}

.login form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.login input {
    color: #fff;
    font-size: 14px;
    font-weight: 500;
    background: #000;
    border: 2px solid #fff;
    padding: 8px 12px;
    margin-top: 20px;
    cursor: pointer;
}

.login input.input-login {
    max-width: 222px;
    width: 100%;
    border-radius: 6px;
    border: 2px solid rgb(60 59 59);
    background: transparent;
    text-align: left;
    color: #fff !important;
    cursor: auto;
    margin-top: 10px;
}

.login input.input-login:hover {
    background: transparent;
}

#btnLogin {
    width: 120px;
    color: #fff;
    font-size: 16px;
    font-weight: 600;
    text-align: center;
    background: #000;
    border: 2px solid #fff;
    border-radius: 20px;
    padding: 8px 12px;
    margin-top: 20px;
    cursor: pointer;
    text-decoration: none;
}

#btnLogin:hover {
    background: #fff;
    color: grey;
    border: 2px solid #fff;
}

.hvr-shutter-out-horizontal:before {
    content: "";
    background: #fff !important;
    border-radius: 20px !important;
}

.login select {
    height: 36px;
    min-width: 250px;
    width: 100%;
    margin-top: 10px;
    border-radius: 6px;
    border: 2px solid rgb(60 59 59);
    background: transparent;
    color: #636363;
    font-size: 14px;
    font-weight: 500;
    padding: 0 10px;
}

.login select option {
    background: #252525;
}

/*Responsive*/

@media only screen and (min-width: 1900px) {
    .main-title .chain-left { 
        left: 34%;
    }
    .main-title .chain-right { 
        right: 34%;
    }
}

@media only screen and (max-width: 767px) {
    figure.logo {
        padding-top: 80px;
    }
    .logo img {
        width: 60px;
    }
    .main-title h2 {
        font-size: 23px;
    }
    .main-title .chain-left,
    .main-title .chain-right { height: 348px; }
    .wrapper-guess {
        width: 70%;
    }
}

@media only screen and (max-width: 460px) {
    .main-title .chain-left { 
        height: 425px; 
        left: 15%;
    }
    .main-title .chain-right { 
        height: 425px; 
        right: 15%;
    }
}

